--- a/top5.html
+++ b/top5.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8">
 <title>Untitled Document</title>
 	<style>
+		body {
+			background-color: #C6F7FF}
 		header { background-color:#78CEFF;padding: 15px; text-align: center; border-bottom: 15px double #BD86BF;border-left: 20px double #F99FF9;border-right: 20px double #F99FF9; border-top-right-radius: 100px;border-top-left-radius: 100px;box-shadow: 5px 6px 7px;font-family: Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", "monospace"  }
 		
 		nav{background-color: #F99FF9                                                                      }
@@ -20,7 +22,15 @@
 		
 		p3{color: black;text-align: left;font-family: Consolas, 'Andale Mono', 'Lucida Console', 'Lucida Sans Typewriter', Monaco, 'Courier New', 'monospace';font-size: 15px;position: absolute;left: 1070px;position: absolute;top:450px;width: 26%}
 		
+		h5{color: black;text-align:left;font-family: Consolas, 'Andale Mono', 'Lucida Console', 'Lucida Sans Typewriter', Monaco, 'Courier New', 'monospace';font-size:25px}
+		p4{color: black;text-align: left;font-family: Consolas, 'Andale Mono', 'Lucida Console', 'Lucida Sans Typewriter', Monaco, 'Courier New', 'monospace';font-size: 15px;}
+		h6{color: black;text-align:left;font-family: Consolas, 'Andale Mono', 'Lucida Console', 'Lucida Sans Typewriter', Monaco, 'Courier New', 'monospace';font-size:25px;position: absolute;left: 320px;top:720px}
+		p5{color: black;text-align: left;font-family: Consolas, 'Andale Mono', 'Lucida Console', 'Lucida Sans Typewriter', Monaco, 'Courier New', 'monospace';font-size: 15px;position: absolute;left: 320px;position: absolute;top:800px;width: 25%}
+		h7{color: black;text-align:left;font-family: Consolas, 'Andale Mono', 'Lucida Console', 'Lucida Sans Typewriter', Monaco, 'Courier New', 'monospace';font-size:25px;position: absolute;left: 1070px;top:770px}
+		p6{color: black;text-align: left;font-family: Consolas, 'Andale Mono', 'Lucida Console', 'Lucida Sans Typewriter', Monaco, 'Courier New', 'monospace';font-size: 15px;position: absolute;left: 1070px;position: absolute;top:800px;width: 25%}
 		
+		p7{color: black;text-align: left;font-family: Consolas, 'Andale Mono', 'Lucida Console', 'Lucida Sans Typewriter', Monaco, 'Courier New', 'monospace';font-size: 15px;}
+		h8{color: black;text-align:left;font-family: Consolas, 'Andale Mono', 'Lucida Console', 'Lucida Sans Typewriter', Monaco, 'Courier New', 'monospace';font-size:25px}
 		
 		
 		#frenchbulldog {
@@ -41,13 +51,32 @@
 		
 		a{text-decoration: none;color:black}
 		
+		#shepherd {
+			;
+				width:300px;
+				height:220px;
+			box-shadow: 5px 7px 20px#001}
+		
+		#cutesh {
+			;
+				width:250px;
+				height:220px;
+			box-shadow: 5px 7px 20px#001;margin-left: 500px}
+		
+		#funnysh {
+			;
+				width:250px;
+				height:220px;
+			box-shadow: 5px 7px 20px#001;margin-left: 500px}
+		
+		
 		
 	</style>
 </head>
 
 <body>
 	<header>
-		<h1>Top 3 dogs</h1>
+		<h1>Top 2 dogs</h1>
 		
 	</header>
 	
@@ -85,8 +114,26 @@
 	
 	<button id="ok"> <a href="https://www.akc.org/dog-breeds/french-bulldog/"> link website</a></button>
 	<hr>
-	<p5>shepherd</p5>
+	<h5>Shepherd</h5>
+	<p4>The <strong>German Shepherd</strong>,[a] also known in Britain as an <strong>Alsatian</strong>, is a German breed of working dog of medium to large size. The breed was developed by Max von Stephanitz using various traditional German herding dogs from 1899.</p4>
+	<h6>History</h6>
+	<p5>During the 1890s, attempts were being made to standardise dog breeds.[4] Dogs were being bred to preserve traits that assisted in their job of herding sheep and protecting their flocks from predators.[5] In Germany this was practised within local communities, where shepherds selected and bred dogs. It was recognised that the breed had the necessary skills for herding sheep, such as intelligence, speed, strength and keen sense of smell.</p5>
+	<h7><strong>Description</strong></h7>
+	<p6>German Shepherds are medium to large-sized dogs.[26] The breed standard height at the withers is 60–65 cm (24–26 in) for males, and 55–60 cm (22–24 in) for females. German Shepherds can sprint at speeds of up to 30 miles per hour (48 km/h). The AKC official breed standard does not set a standard weight range.[31] They have a domed forehead, a long square-cut muzzle with strong jaws and a black nose. The eyes are medium-sized and brown. The ears are large and stand erect, open at the front and parallel, but they often are pulled back during movement.  </p6>
 	
+	
+	
+	
+	
+	<a href="https://www.youtube.com/watch?v=heU3bqPE0No" target="_blank">
+		<img src="GettyImages-977898246-1942d4364fa64bd2ba792a86f4f24715.jpg" id="shepherd" alt="shepherd"></a>
+	<a href="https://www.youtube.com/watch?v=gnJe72lrqyM" target="_blank">
+	   <img src="16_Love-5bb4c12bc9e77c00263933b3.jpg" id="cutesh" alt="cutesh"></a>
+	<a href="https://www.youtube.com/watch?v=nF-PTvbXYHA" target="_blank">
+	<img src="ff3bb31a54462ea817fac885d88f3a85.jpg" id="funnysh" alt="funnysh"></a>
+	
+	<button id="oo"> <a href="https://www.akc.org/dog-breeds/german-shepherd-dog/"> link website</a></button>
+	<hr>
 	
 	
 	
